again umar to home

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right mainNav">
-					<li class="active"><a href="index.html">Umar</a></li>
+					<li class="active"><a href="index.html">Home</a></li>
 					<li><a href="NamazTime.html">Namaz Timings</a></li>
 					<li><a href="Donations.html">Donations</a></li>
 					<li><a href="contact.html">Contact</a></li>
